--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,2 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-check-notify" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
-    <name>checkNotify</name>
-    <js-module name="checkNotify" src="www/checkNotify.js">
-        <clobbers target="cordova.plugins.checkNotify" />
-    </js-module>
-</plugin>
+<plugin id="cordova-plugin-check-notify" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android"><name>checkNotify</name><js-module name="checkNotify" src="www/checkNotify.js"><clobbers target="cordova.plugins.checkNotify" /></js-module><platform name="android"><config-file parent="/*" target="res/xml/config.xml"><feature name="checkNotify"><param name="android-package" value="cordova-plugin-check-notify.checkNotify" /></feature></config-file><config-file parent="/*" target="AndroidManifest.xml"></config-file><source-file src="src/android/checkNotify.java" target-dir="src/cordova-plugin-check-notify/checkNotify" /></platform></plugin>
